Wed Aug 13 15:06:17 EDT 2008	JK Lowden <jklowden@freetds.org>
	* doc/userguide.sgml advice about unicode strings
	* src/dblib/dblib.c tdserror for setting invalid TDS version

Wed Aug 13 00:08:28 EDT 2008	JK Lowden <jklowden@freetds.org>
	* src/tds/iconv.c clarified log messages

Thu Aug 07 12:05:03 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c: small network optimization

Thu Aug 07 09:17:58 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/challenge.c: use NTLMv2 if possible

Wed Aug 06 09:32:32 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/config.c src/tds/login.c src/tds/mem.c src/tds/token.c:
	- keep packet size to safe values

Thu Jul 31 16:53:35 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/challenge.c: removed important FIXMEs

Thu Jul 31 06:12:05 EDT 2008	JK Lowden <jklowden@freetds.org>
	* doc/tds.html: updated and cleaned up somewhat

Wed Jul 30 23:25:26 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/challenge.c: additional cleanup and notes

Wed Jul 30 16:36:52 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/challenge.c:
	- merged patch #2031829 about NTLMv2, still some FIXME/TODO

Wed Jul 30 10:05:02 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/Makefile.am: add missing header for hmac

Wed Jul 30 10:01:14 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/hmac_md5.h(added) src/tds/hmac_md5.c(added):
	* src/tds/Makefile.am:
	- added needed hmac code for NTLMv2

Tue Jul 29 09:54:23 EDT 2008	JK Lowden <jklowden@freetds.org>
	* src/ctlib/ct.c:
	- patch from ML on 29 July 2008 from Andrew Victor 
	- re BLOBs as parameters

Mon Jul 28 16:56:36 EDT 2008	JK Lowden <jklowden@freetds.org>
	* samples/odbc_rpc.pl src/odbc/error.c src/odbc/odbc.c:
	- tracking down SQLParamData behavior 

Thu Jul 24 18:02:52 EDT 2008	JK Lowden <jklowden@freetds.org>
	* samples/odbc_rpc.pl: