@@ -1,3 +1,7 @@
+Thu Aug 14 10:48:38 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* include/tds.h src/tds/config.c:
+	- add "asa database" option to specify ASA database
+
 Wed Aug 13 15:06:17 EDT 2008	JK Lowden <jklowden@freetds.org>
 	* doc/userguide.sgml advice about unicode strings
 	* src/dblib/dblib.c tdserror for setting invalid TDS version
@@ -521,4 +525,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2579 2008/08/13 19:08:30 jklowden Exp $
+$Id: ChangeLog,v 1.2580 2008/08/14 08:49:22 freddy77 Exp $
